force-app/main/default/objects/Destructive_Manifest__c/Destructive_Manifest__c.object-meta.xml
<CustomObject>
    <label>Destructive Changes</label>
    <nameField>
        <displayFormat>DM-{YY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Destructive Manifest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Destructive Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>