force-app/main/default/objects/Destructive_Manifest__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Component</label>
    <referenceTo>Component__c</referenceTo>
    <relationshipName>Destructive_Manifests</relationshipName>
    <type>Lookup</type>
</CustomField>