force-app/main/default/objects/Destructive_Manifest__c/fields/Component_Name2__c.field-meta.xml
<CustomField>
    <fullName>Component_Name2__c</fullName>
    <label>Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>