force-app/main/default/objects/Destructive_Manifest__c/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <formula>HYPERLINK(
            IF( Component__c != null, &apos;/&apos; + Component__r.Id , &apos;/&apos;+ Metadata_Item__c), 
            IF(  Component__c  != null, Component__r.Component_Name__c ,  Metadata_Item__r.API_Name__c  ), 
 &apos;_self&apos;)</formula>
    <label>Component Name</label>
    <type>Text</type>
</CustomField>