force-app/main/default/objects/Destructive_Manifest__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ApexClass</fullName>
                <default>true</default>
                <label>ApexClass</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>