force-app/main/default/objects/Destructive_Manifest__c/fields/Patch__c.field-meta.xml
<CustomField>
    <fullName>Patch__c</fullName>
    <label>Deployment</label>
    <referenceTo>Patch__c</referenceTo>
    <relationshipName>Destructive_Manifests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>